# CLDrone

./: LICENSE  README.md
src/Firmware/launch/: ardrone.launch  gazebo_ardrone_floating_marker_world.launch  gazebo_ardrone_ground_marker_world.launch  gazebo_ardrone_marker_empty_world.launch  gazebo_ardrone_marker_world.launch  gazebo_ardrone_mbzirc_world.launch  gazebo_ardrone_mbzirc_world_offboard.launch  gazebo_ardrone_polaris_world.launch  gazebo_iris_empty_world.launch  gazebo_iris_house_world.launch  gazebo_iris_outdoor_world.launch  gazebo_px4_floating_marker_tracker.launch  gazebo_px4_mbzirc.launch  gazebo_px4_offboard.launch  gazebo_px4_polaris_tracker.launch  mavros_sitl.launch  multicopter.launch  multicopter_x.launch
src/Firmware/posix-configs/SITL/init/: rcS
src/Firmware/src/modules/mc_pos_control_multiplatform/: mc_pos_control.cpp
src/apriltags/: CMakeLists.txt  CMakeLists.txt~
src/apriltags/launch/: apriltags.launch  apriltags.launch~
src/apriltags/msg/: Dataset.msg  ImageData.msg
src/apriltags/src/: CMakeLists.txt
src/body_axis_velocity_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/body_axis_velocity_controller/launch/: body_axis_velocity_controller.launch  body_axis_velocity_controller.launch~
src/body_axis_velocity_controller/src/: body_axis_velocity_controller_node.cpp  body_axis_velocity_controller_node.h  body_axis_velocity_controller_node.h~
src/polaris_simulation_standalone/: README.md  polaris_control.py  polaris_program_control.py
src/polaris_simulation_standalone/polaris_description/: CMakeLists.txt  package.xml
src/polaris_simulation_standalone/polaris_description/models/: model-1_3.sdf  model-1_4.sdf  model.sdf
src/polaris_simulation_standalone/polaris_description/models/materials/scripts/: polaris.material  polaris.material~
src/polaris_simulation_standalone/polaris_simple_control_plugin/: CMakeLists.txt  package.xml
src/polaris_simulation_standalone/polaris_simple_control_plugin/include/: polaris_simple_control_plugin.h
src/polaris_simulation_standalone/polaris_simple_control_plugin/launch/: empty_world.launch
src/polaris_simulation_standalone/polaris_simple_control_plugin/src/: polaris_simple_control_plugin.cpp
src/rotors_simulator/rotors_description/meshes/: marker_10cm.dae  marker_4cm.dae
src/rotors_simulator/rotors_description/urdf/: ardrone.xacro  ardrone_base.xacro  ardrone_base.xacro~  ardrone_marker.xacro  component_snippets.xacro  marker.urdf.xacro
src/rotors_simulator/rotors_gazebo/launch/: ardrone_empty_world.launch  ardrone_empty_world.launch~  ardrone_ground_marker_world.launch  ardrone_ground_marker_world.launch~  ardrone_marker_empty_world.launch  ardrone_marker_empty_world.launch~  ardrone_marker_world.launch~  ardrone_mbzirc_world.launch  ardrone_mbzirc_world.launch~  ardrone_polaris_world.launch  ardrone_polaris_world.launch~  multi_ardrone_marker_empty_world.launch  multi_ardrone_marker_empty_world.launch~  spawn_ardrone.launch  spawn_ardrone.launch~
src/rotors_simulator/rotors_gazebo/models/: CMakeLists.txt
src/rotors_simulator/rotors_gazebo/models/mbzirc/: display.launch  display.launch~  gazebo_MBZIRC.launch  gazebo_MBZIRC.launch~  gazebo_smartcar.launch  gazebo_smartcar.launch~  model-1_4 (copy).sdf  model-1_4.sdf  model-1_4.sdf~  model.config  model.config~  model.sdf  robot1.urdf  robot1.urdf~  simple.launch  simple.launch~  simple_robot.launch  simple_robot.launch~  smartcar.urdf  smartcar.urdf~  smartcar2.urdf  smartcar_body.urdf.xacro  smartcar_body.urdf.xacro~  smartcar_urdf.launch  zixie_smartcar.launch  zixie_smartcar.launch~
src/rotors_simulator/rotors_gazebo/models/mbzirc/meshes/: 270-you.dae  270du-fengkou-you-yup.dae  270du-fengkou-you-yup.dae~  270du-fengkou-yup.dae  270du-fengkou-zuo-yup.dae  270du-zuo.dae  chonghua270du-you.dae  chonghua270du-zuo.dae  circle.dae  circleleft.dae  fengkou-pink.dae  left11mm.dae  right11mm.dae  you-yup.dae  you-yup.dae~  you.dae  zch270-you.dae  zch270-zuo.dae  zuo-yup.dae  zuo-yup.dae~  zuo.dae  右半圆.dae  左半圆.dae
src/rotors_simulator/rotors_gazebo/models/starting_floor/: model.config  model.sdf  model.sdf~
src/rotors_simulator/rotors_gazebo/worlds/: animated_box.world  basic.world  basic.world~  floating_marker.world  ground_marker.world  light.world  vrc_task_1.world  vrc_task_1.world~
(+1 files in other folders)
