<package>
  <name>polaris_description</name>
  <version>0.3.5</version>
  <description>A Simple Plugin to Control Polaris Ranger</description>
  <maintainer email="kongww.nudt@gmail.com">Weiwei Kong</maintainer>

  <license>BSD</license>

  <author email="kongww.nudt@gmail.com">Weiwei Kong</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
 
  <run_depend>gazebo_ros</run_depend>
 
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/" />
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
